// See README.txt for information and build instructions.
//
// Note: START and END tags are used in comments to define sections used in
// tutorials.  They are not part of the syntax for Protocol Buffers.
//
// To get an in-depth walkthrough of this file and the related examples, see:
// https://developers.google.com/protocol-buffers/docs/tutorials

// [START declaration]
syntax = "proto3";
package dotbpe;
// [END declaration]

// [START csharp_declaration]
option csharp_namespace = "HelloRpc.Common";
// [END csharp_declaration]

//[START_RPC_SERVICE]
// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc HelloPlus (HelloRequest) returns (HelloResponse) {}
}

service Math{
    rpc Add (AddRequest) returns (AddResponse) {}
}
//[END_RPC_SERVICE]

// [START messages]
// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}

message AddRequest {
  int32 left = 1;
  int32 right = 2;
}

// The response message containing the greetings
message AddResponse {
  int32 total = 1;
}
// [END messages]

